crates/tracing/tests/ui/log/field_not_in_allowlist.stderr
error: `foo` is not in the OpenTelemetry allowlist
 --> tests/ui/log/field_not_in_allowlist.rs:4:11
  |
4 |     warn!(foo = %x, "msg");
  |           ^^^
