crates/tracing/tests/ui/log/field_not_in_allowlist.rs
use miden_node_tracing::warn;

fn main() {
    warn!(foo = %x, "msg");
}
